improved README accuracy for root distro